# python_projects

./: .gitignore  pyproject.toml
Book Inventory API/: main.py
Book Inventory API/db/: shema.sql
Book Inventory API/integrations/: db.py
Book Inventory API/repositories/: all_books.py  create_book.py  delete_book.py  get_a_book_by_id.py  update_book.py
Book Inventory API/routes/: books_routes.py
Book Inventory API/schemas/: request_validation.py  response_validation.py
Book Inventory API/services/: create_book.py  delete_book_by_id.py  get_book_by_id.py  get_books.py  update_book.py
Exercises/: all_longest_word.py  compress_string.py  count_vowels.py  count_vowels_and_consonants.py  find_missing_number.py  first_unique_char.py  group_by_length.py  is_anagram.py  is_palindrome.py  longest_word.py  most_frequent_word.py  second_largest_number.py  set_examples.py
Exercises/group_by_length_last_number/: group_by_length_and_last_word.py
Exercises/lineup_students/: lineup_students.py  test_lineup_students.py
JOB_APPLICATION_TRACKER/: README.md  docker-compose.yml
SQSLAMBDADEMO/sqslambdademo/: cdk.json
SQSLAMBDADEMO/sqslambdademo/sqslambdademo/: sqslambdademo_stack.py
learn_terraform/: main.tf
rps_tdd/: tests.py
